# src/modules/accounts/infra/typeorm/entities/UserTokens.ts
@@ -1,0 +1,39 @@
+import {
+  Column,
+  CreateDateColumn,
+  Entity,
+  JoinColumn,
+  ManyToOne,
+  PrimaryColumn,
+} from 'typeorm'
+import { v4 as uuidV4 } from 'uuid'
+
+import { User } from './User'
+
+@Entity('users_token')
+export class UserTokens {
+  @PrimaryColumn('uuid')
+  id: string
+
+  @Column('varchar')
+  refresh_token: string
+
+  @Column('uuid')
+  user_id: string
+
+  @ManyToOne(() => User)
+  @JoinColumn({ name: 'user_id' })
+  user: User
+
+  @Column('timestamp')
+  expires_date: Date
+
+  @CreateDateColumn()
+  created_at: Date
+
+  constructor() {
+    if (!this.id) {
+      this.id = uuidV4()
+    }
+  }
+}
