# src/swagger.json
@@ -179,6 +179,10 @@
                     "token": {
                       "type": "string",
                       "example": "bearer f970e2767d0cfe75876ea857f92e319b"
+                    },
+                    "refresh_token": {
+                      "type": "string",
+                      "example": "f970e2767d0cfe75876ea857f92e319b"
                     }
                   }
                 }
